@@ -30,6 +30,7 @@ import com.facebook.buck.distributed.thrift.BuildJobStateFileHashEntry;
 import com.facebook.buck.distributed.thrift.BuildJobStateFileHashes;
 import com.facebook.buck.distributed.thrift.BuildJobStateTargetGraph;
 import com.facebook.buck.distributed.thrift.BuildJobStateTargetNode;
+import com.facebook.buck.distributed.thrift.BuildMode;
 import com.facebook.buck.distributed.thrift.BuildSlaveConsoleEvent;
 import com.facebook.buck.distributed.thrift.BuildSlaveEvent;
 import com.facebook.buck.distributed.thrift.BuildSlaveEventType;
@@ -55,14 +56,6 @@ import com.google.common.collect.ImmutableSet;
 import com.google.common.util.concurrent.Futures;
 import com.google.common.util.concurrent.ListeningExecutorService;
 import com.google.common.util.concurrent.MoreExecutors;
-
-import org.easymock.EasyMock;
-import org.easymock.IArgumentMatcher;
-import org.junit.After;
-import org.junit.Assert;
-import org.junit.Before;
-import org.junit.Test;
-
 import java.io.IOException;
 import java.util.HashMap;
 import java.util.List;
@@ -71,6 +64,12 @@ import java.util.concurrent.ExecutionException;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.stream.Collectors;
+import org.easymock.EasyMock;
+import org.easymock.IArgumentMatcher;
+import org.junit.After;
+import org.junit.Assert;
+import org.junit.Before;
+import org.junit.Test;
 
 public class DistBuildClientExecutorTest {
 
@@ -85,6 +84,7 @@ public class DistBuildClientExecutorTest {
   private FakeFileHashCache fakeFileHashCache;
   private BuckEventBus mockEventBus;
   private StampedeId stampedeId;
+  private DistBuildClientStatsTracker distBuildClientStatsTracker;
 
   @Before
   public void setUp() {
@@ -94,13 +94,16 @@ public class DistBuildClientExecutorTest {
     buckVersion = new BuckVersion();
     buckVersion.setGitHash("thishashisamazing");
     buildJobState = createMinimalFakeBuildJobState();
-    distBuildClientExecutor = new DistBuildClientExecutor(
-        buildJobState,
-        mockDistBuildService,
-        mockLogStateTracker,
-        buckVersion,
-        scheduler,
-        1);
+    distBuildClientStatsTracker = new DistBuildClientStatsTracker();
+    distBuildClientExecutor =
+        new DistBuildClientExecutor(
+            buildJobState,
+            mockDistBuildService,
+            mockLogStateTracker,
+            buckVersion,
+            distBuildClientStatsTracker,
+            scheduler,
+            1);
 
     directExecutor = MoreExecutors.listeningDecorator(MoreExecutors.newDirectExecutorService());
     fakeProjectFilesystem = new FakeProjectFilesystem();
@@ -170,9 +173,12 @@ public class DistBuildClientExecutorTest {
   public void testFetchingSlaveStatuses()
       throws IOException, ExecutionException, InterruptedException {
     final BuildJob job = createBuildJobWithSlaves();
-    List<RunId> runIds = job.getSlaveInfoByRunId().values().stream()
-        .map(BuildSlaveInfo::getRunId)
-        .collect(Collectors.toList());
+    List<RunId> runIds =
+        job.getSlaveInfoByRunId()
+            .values()
+            .stream()
+            .map(BuildSlaveInfo::getRunId)
+            .collect(Collectors.toList());
 
     BuildSlaveStatus slaveStatus0 = new BuildSlaveStatus();
     slaveStatus0.setStampedeId(stampedeId);
@@ -190,11 +196,10 @@ public class DistBuildClientExecutorTest {
         .andReturn(Optional.of(slaveStatus1));
     replay(mockDistBuildService);
 
-    List<BuildSlaveStatus> slaveStatuses = distBuildClientExecutor.fetchBuildSlaveStatusesAsync(
-        job, directExecutor).get();
+    List<BuildSlaveStatus> slaveStatuses =
+        distBuildClientExecutor.fetchBuildSlaveStatusesAsync(job, directExecutor).get();
     Assert.assertEquals(
-        ImmutableSet.copyOf(slaveStatuses),
-        ImmutableSet.of(slaveStatus0, slaveStatus1));
+        ImmutableSet.copyOf(slaveStatuses), ImmutableSet.of(slaveStatus0, slaveStatus1));
 
     verify(mockDistBuildService);
   }
@@ -203,9 +208,12 @@ public class DistBuildClientExecutorTest {
   public void testFetchingSlaveEvents()
       throws IOException, ExecutionException, InterruptedException {
     final BuildJob job = createBuildJobWithSlaves();
-    List<RunId> runIds = job.getSlaveInfoByRunId().values().stream()
-        .map(BuildSlaveInfo::getRunId)
-        .collect(Collectors.toList());
+    List<RunId> runIds =
+        job.getSlaveInfoByRunId()
+            .values()
+            .stream()
+            .map(BuildSlaveInfo::getRunId)
+            .collect(Collectors.toList());
 
     // Create queries.
     BuildSlaveEventsQuery query0 = new BuildSlaveEventsQuery();
@@ -245,23 +253,18 @@ public class DistBuildClientExecutorTest {
     expect(mockDistBuildService.multiGetBuildSlaveEvents(ImmutableList.of(query0, query1)))
         .andReturn(ImmutableList.of(eventWithSeqId1, eventWithSeqId2));
 
-    mockEventBus.post(eqConsoleEvent(
-        DistBuildUtil.createConsoleEvent(consoleEvent1)));
-    mockEventBus.post(eqConsoleEvent(
-        DistBuildUtil.createConsoleEvent(consoleEvent2)));
+    mockEventBus.post(eqConsoleEvent(DistBuildUtil.createConsoleEvent(consoleEvent1)));
+    mockEventBus.post(eqConsoleEvent(DistBuildUtil.createConsoleEvent(consoleEvent2)));
     expectLastCall();
 
-
     // At the end, also test that sequence ids are being maintained properly.
-    expect(mockDistBuildService.createBuildSlaveEventsQuery(
-        stampedeId,
-        runIds.get(0),
-        eventWithSeqId1.getFirst() + 1))
+    expect(
+            mockDistBuildService.createBuildSlaveEventsQuery(
+                stampedeId, runIds.get(0), eventWithSeqId1.getFirst() + 1))
         .andReturn(query0);
-    expect(mockDistBuildService.createBuildSlaveEventsQuery(
-        stampedeId,
-        runIds.get(1),
-        eventWithSeqId2.getFirst() + 1))
+    expect(
+            mockDistBuildService.createBuildSlaveEventsQuery(
+                stampedeId, runIds.get(1), eventWithSeqId2.getFirst() + 1))
         .andReturn(query1);
     expect(mockDistBuildService.multiGetBuildSlaveEvents(ImmutableList.of(query0, query1)))
         .andReturn(ImmutableList.of());
@@ -270,10 +273,12 @@ public class DistBuildClientExecutorTest {
     replay(mockEventBus);
 
     // Test that the events are properly fetched and posted onto the Bus.
-    distBuildClientExecutor.fetchAndPostBuildSlaveEventsAsync(job, mockEventBus, directExecutor)
+    distBuildClientExecutor
+        .fetchAndPostBuildSlaveEventsAsync(job, mockEventBus, directExecutor)
         .get();
     // Also test that sequence ids are being maintained properly.
-    distBuildClientExecutor.fetchAndPostBuildSlaveEventsAsync(job, mockEventBus, directExecutor)
+    distBuildClientExecutor
+        .fetchAndPostBuildSlaveEventsAsync(job, mockEventBus, directExecutor)
         .get();
 
     verify(mockDistBuildService);
@@ -302,9 +307,9 @@ public class DistBuildClientExecutorTest {
     StreamLogs log1 = new StreamLogs();
     log1.setErrorMessage("unique");
     logsResponse.addToMultiStreamLogs(log1);
-    expect(mockDistBuildService.fetchSlaveLogLines(
-        stampedeId,
-        ImmutableList.of(logRequest1, logRequest2)))
+    expect(
+            mockDistBuildService.fetchSlaveLogLines(
+                stampedeId, ImmutableList.of(logRequest1, logRequest2)))
         .andReturn(logsResponse);
     mockLogStateTracker.processStreamLogs(logsResponse.getMultiStreamLogs());
     expectLastCall().once();
@@ -324,9 +329,12 @@ public class DistBuildClientExecutorTest {
   @Test
   public void testMaterializingLogDirs() throws IOException {
     final BuildJob job = createBuildJobWithSlaves();
-    List<RunId> runIds = job.getSlaveInfoByRunId().values().stream()
-        .map(BuildSlaveInfo::getRunId)
-        .collect(Collectors.toList());
+    List<RunId> runIds =
+        job.getSlaveInfoByRunId()
+            .values()
+            .stream()
+            .map(BuildSlaveInfo::getRunId)
+            .collect(Collectors.toList());
 
     LogDir logDir0 = new LogDir();
     logDir0.setRunId(runIds.get(0));
@@ -355,15 +363,15 @@ public class DistBuildClientExecutorTest {
   }
 
   /**
-   * This test sees that executeAndPrintFailuresToEventBus(...) does the following:
-   *  1. Initiates the build by uploading missing source files, dot files and target graph.
-   *  2. Kicks off the build.
-   *  3. Fetches the status of the build, status of the slaves, console events and real-time logs
-   *     in every status loop.
-   *  4. Materializes log directories once the build finishes.
+   * This test sees that executeAndPrintFailuresToEventBus(...) does the following: 1. Initiates the
+   * build by uploading missing source files, dot files and target graph. 2. Kicks off the build. 3.
+   * Fetches the status of the build, status of the slaves, console events and real-time logs in
+   * every status loop. 4. Materializes log directories once the build finishes.
    *
-   *  Individual methods for fetching the status, logs, posting the events, etc. are
-   *  tested separately.
+   * <p>
+   *
+   * <p>Individual methods for fetching the status, logs, posting the events, etc. are tested
+   * separately.
    */
   @Test
   public void testOrderlyExecution() throws IOException, InterruptedException {
@@ -372,18 +380,22 @@ public class DistBuildClientExecutorTest {
     BuildJob job = new BuildJob();
     job.setStampedeId(stampedeId);
 
-    expect(mockDistBuildService.createBuild()).andReturn(job);
-    expect(mockDistBuildService.uploadMissingFilesAsync(buildJobState.fileHashes, directExecutor))
+    expect(mockDistBuildService.createBuild(BuildMode.REMOTE_BUILD, 1)).andReturn(job);
+    expect(
+            mockDistBuildService.uploadMissingFilesAsync(
+                buildJobState.fileHashes, distBuildClientStatsTracker, directExecutor))
         .andReturn(Futures.immediateFuture(null));
-    expect(mockDistBuildService.uploadBuckDotFilesAsync(
-        stampedeId,
-        fakeProjectFilesystem,
-        fakeFileHashCache,
-        directExecutor))
+    expect(
+            mockDistBuildService.uploadBuckDotFilesAsync(
+                stampedeId,
+                fakeProjectFilesystem,
+                fakeFileHashCache,
+                distBuildClientStatsTracker,
+                directExecutor))
         .andReturn(Futures.immediateFuture(null));
-    mockDistBuildService.uploadTargetGraph(buildJobState, stampedeId);
+    mockDistBuildService.uploadTargetGraph(buildJobState, stampedeId, distBuildClientStatsTracker);
     expectLastCall().once();
-    mockDistBuildService.setBuckVersion(stampedeId, buckVersion);
+    mockDistBuildService.setBuckVersion(stampedeId, buckVersion, distBuildClientStatsTracker);
     expectLastCall().once();
 
     // There's no point checking the DistBuildStatusEvent, since we don't know what 'stage' the
@@ -430,8 +442,7 @@ public class DistBuildClientExecutorTest {
 
     expect(mockLogStateTracker.createRealtimeLogRequests(job.getSlaveInfoByRunId().values()))
         .andReturn(ImmutableList.of());
-    expect(mockDistBuildService.createBuildSlaveEventsQuery(stampedeId, runId, 0))
-        .andReturn(query);
+    expect(mockDistBuildService.createBuildSlaveEventsQuery(stampedeId, runId, 0)).andReturn(query);
     expect(mockDistBuildService.multiGetBuildSlaveEvents(ImmutableList.of(query)))
         .andReturn(ImmutableList.of());
     expect(mockDistBuildService.fetchBuildSlaveStatus(stampedeId, runId))
@@ -449,8 +460,7 @@ public class DistBuildClientExecutorTest {
         .andReturn(ImmutableList.of());
     expect(mockDistBuildService.fetchBuildSlaveStatus(stampedeId, runId))
         .andReturn(Optional.of(slaveStatus));
-    expect(mockDistBuildService.createBuildSlaveEventsQuery(stampedeId, runId, 0))
-        .andReturn(query);
+    expect(mockDistBuildService.createBuildSlaveEventsQuery(stampedeId, runId, 0)).andReturn(query);
     expect(mockDistBuildService.multiGetBuildSlaveEvents(ImmutableList.of(query)))
         .andReturn(ImmutableList.of());
 
@@ -461,8 +471,13 @@ public class DistBuildClientExecutorTest {
     replay(mockEventBus);
     replay(mockLogStateTracker);
 
-    distBuildClientExecutor.executeAndPrintFailuresToEventBus(directExecutor,
-        fakeProjectFilesystem, fakeFileHashCache, mockEventBus);
+    distBuildClientExecutor.executeAndPrintFailuresToEventBus(
+        directExecutor,
+        fakeProjectFilesystem,
+        fakeFileHashCache,
+        mockEventBus,
+        BuildMode.REMOTE_BUILD,
+        1);
 
     verify(mockDistBuildService);
     verify(mockLogStateTracker);
@@ -480,18 +495,17 @@ public class DistBuildClientExecutorTest {
     @Override
     public boolean matches(Object other) {
       if (other instanceof ConsoleEvent) {
-        return event.getMessage().equals(((ConsoleEvent) other).getMessage()) &&
-            event.getLevel().equals(((ConsoleEvent) other).getLevel());
+        return event.getMessage().equals(((ConsoleEvent) other).getMessage())
+            && event.getLevel().equals(((ConsoleEvent) other).getLevel());
       }
       return false;
     }
 
     @Override
     public void appendTo(StringBuffer stringBuffer) {
-      stringBuffer.append(String.format(
-          "eqConsoleEvent(message=[%s], level=[%s])",
-          event.getMessage(),
-          event.getLevel()));
+      stringBuffer.append(
+          String.format(
+              "eqConsoleEvent(message=[%s], level=[%s])", event.getMessage(), event.getLevel()));
     }
   }
 
